<resources>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--
        Init
    -->
    <string name="app_name">Wallpaper Pro</string>
    <string name="ADMOB_AD_BANNER_ID">test</string>
    <string name="ADMOB_INTERSTITIAL_AD_ID">test</string>
    <string name="developer_name">Devalutix</string>
    <string name="developer_mail">devalutix@gmail.com</string>

    <!--
        Menu Actions
    -->
    <string name="rate_action">Rate Our App</string>
    <string name="our_apps_action">Our Apps</string>
    <string name="share_action">Share App</string>
    <string name="share_msg_1">Hey Check This Image Out</string>
    <string name="share_msg_2">on</string>
    <string name="share_app_message">Check This App Out</string>
    <string name="feedback_action">Send Feedback</string>
    <string name="dark_mode_action">Dark Mode</string>

    <!--
        Pages Title
     -->
    <string name="popular">Popular</string>
    <string name="recent">Recent</string>
    <string name="featured">Featured</string>

    <!--
        Infos Card
    -->
    <string name="title_infos">Title: </string>
    <string name="date_added_infos">Date Added: </string>
    <string name="categories_infos">Categories: </string>

    <!--
        Server Responses
    -->
    <string name="server_prblm_retry">Server Problem</string>
    <string name="net_prblm_retry">Internet Connection Problem</string>

    <!--
        Permission Request
    -->
    <string name="permission_msg">You need this Permission to download the wallpapers</string>
    <string name="permission_title">Needs Permission</string>
    <string name="permission_positive">Alright</string>
    <string name="permission_negative">No</string>

    <!--
        Downloading
    -->
    <string name="downloading">Downloading...</string>
    <string name="downloaded">Wallpaper Downloaded</string>
    <string name="error_download">Error Occurred, Can\'t Download the Wallpaper</string>
    <string name="error_download_permission">Can\'t Download Wallpaper, Go To App Preferences and Give Permission to The App</string>

    <!--
        Set Wallpaper
    -->
    <string name="set_wallpaper_btn">Set Wallpaper</string>
    <string name="set_wallpaper">Wallpaper Set Successfully</string>
    <string name="set_wallpaper_error">Problem Occurred, Can\'t Set Wallpaper</string>

    <!--
        Toolbar Text
    -->
    <string name="search_toolbar">Search:</string>

    <!--
        Collections
    -->
    <string name="go_to_collections">Go To Collections</string>
    <string name="create_collection">Create Collection</string>
    <string name="edit_collection">Edit Collection</string>
    <string name="empty_collection">This Collection is empty.</string>
    <string name="collection_name">Collection Name</string>

    <!--
        Wallpaper Added To Favorites Message
    -->
    <string name="saved_to_my_favorites">Saved To My Favorites</string>
    <string name="wallpaper_added_msg">Wallpaper Added To</string>

    <!--
       Others
   -->
    <string name="done">Done</string>
    <string name="name">Name:</string>
    <string name="retry">Retry</string>

    <string name="empty_category">Empty Category</string>
    <string name="empty_search">No Results</string>
    <string name="empty_images">No Images</string>
</resources>

