<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ExploreFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/filter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/swipe_refresh_explore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/popular_filter"
                android:layout_width="80dp"
                android:textSize="12sp"
                android:layout_height="38dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/popular" />

            <Button
                android:id="@+id/recent_filter"
                android:layout_width="80dp"
                android:textSize="12sp"
                android:layout_height="38dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/recent" />

            <Button
                android:id="@+id/featured_filter"
                android:layout_width="80dp"
                android:textSize="12sp"
                android:layout_height="38dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/featured" />

        </LinearLayout>


        <ImageView
            android:id="@+id/no_network_explore"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/internet_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/empty_explore"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:src="@drawable/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_container"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_explore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_container">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/explore_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/retry_card"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>